# my-pdf-reader

./: .gitignore  .mise.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  SPEC.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs  pdf_set.rs
src-tauri/src/models/: mod.rs  pdf_set.rs
src/components/PDFViewer/: PDFPanel.tsx  PDFViewer.tsx
src/components/SetList/: NewSetDialog.tsx  SetCard.tsx  SetList.tsx
src/components/common/: Button.tsx
src/domain/: PDFSet.ts
src/features/pdfSet/api/: pdfSetApi.ts
src/features/pdfSet/hooks/: usePDFSets.ts
src/styles/: globals.css
